fix spacing at 320px

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -12,3 +12,9 @@
   padding: 0;
   justify-content: center;
 }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .cards {
+    padding: 0;
+  }
+}
